book: update it
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/it/v2/Customizing-Git-Git-Attributes.html
+++ b/external/book/content/book/it/v2/Customizing-Git-Git-Attributes.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Customizing-Git-Git-Configuration
     next: book/it/v2/Customizing-Git-Git-Hooks
 title: Git - Git Attributes
+aliases:
+- "/book/it/Customizing-Git-Attributi-di-Git.html"
+- "/book/it/v1/Customizing-Git-Attributi-di-Git.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
