--- a/external/book/content/book/it/v2/Distributed-Git-Contributing-to-a-Project.html
+++ b/external/book/content/book/it/v2/Distributed-Git-Contributing-to-a-Project.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Distributed-Git-Distributed-Workflows
     next: book/it/v2/Distributed-Git-Maintaining-a-Project
 title: Git - Contributing to a Project
+aliases:
+- "/book/it/Git-distribuito-Contribuire-ad-un-Progetto.html"
+- "/book/it/v1/Git-distribuito-Contribuire-ad-un-Progetto.html"
 ---
 <h2 id="r_contributing_project">Contributing to a Project</h2>
 <div class="paragraph">
