--- a/external/book/content/book/it/v2/Distributed-Git-Maintaining-a-Project.html
+++ b/external/book/content/book/it/v2/Distributed-Git-Maintaining-a-Project.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Distributed-Git-Contributing-to-a-Project
     next: book/it/v2/Distributed-Git-Summary
 title: Git - Maintaining a Project
+aliases:
+- "/book/it/Git-distribuito-Mantenere-un-Progetto.html"
+- "/book/it/v1/Git-distribuito-Mantenere-un-Progetto.html"
 ---
 <h2 id="_maintaining_a_project">Maintaining a Project</h2>
 <div class="paragraph">
