--- a/external/book/content/book/it/v2/Distributed-Git-Summary.html
+++ b/external/book/content/book/it/v2/Distributed-Git-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Distributed-Git-Maintaining-a-Project
     next: book/it/v2/GitHub-Account-Setup-and-Configuration
 title: Git - Summary
+aliases:
+- "/book/it/Git-distribuito-Summary.html"
+- "/book/it/v1/Git-distribuito-Summary.html"
 ---
 <h2 id="_summary_4">Summary</h2>
 <div class="paragraph">
