--- a/external/book/content/book/it/v2/Git-Basics-Getting-a-Git-Repository.html
+++ b/external/book/content/book/it/v2/Git-Basics-Getting-a-Git-Repository.html
@@ -16,6 +16,11 @@ book:
     previous: book/it/v2/Per-Iniziare-Sommario
     next: book/it/v2/Git-Basics-Recording-Changes-to-the-Repository
 title: Git - Getting a Git Repository
+aliases:
+- "/book/it/Basi-di-Git.html"
+- "/book/it/v1/Basi-di-Git.html"
+- "/book/it/Basi-di-Git-Ottenere-un-Repository-Git.html"
+- "/book/it/v1/Basi-di-Git-Ottenere-un-Repository-Git.html"
 ---
 <p>Se devi leggere un solo capitolo per iniziare a usare Git, leggi questo.
 Questo capitolo copre ogni comando di base di cui avrai bisogno per fare la maggior parte delle cose che farai con Git.
