--- a/external/book/content/book/it/v2/Git-Basics-Recording-Changes-to-the-Repository.html
+++ b/external/book/content/book/it/v2/Git-Basics-Recording-Changes-to-the-Repository.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Basics-Getting-a-Git-Repository
     next: book/it/v2/Git-Basics-Viewing-the-Commit-History
 title: Git - Recording Changes to the Repository
+aliases:
+- "/book/it/Basi-di-Git-Registrare-i-Cambiamenti-nel-Repository.html"
+- "/book/it/v1/Basi-di-Git-Registrare-i-Cambiamenti-nel-Repository.html"
 ---
 <h2 id="_recording_changes_to_the_repository">Recording Changes to the Repository</h2>
 <div class="paragraph">
