--- a/external/book/content/book/it/v2/Git-Basics-Tagging.html
+++ b/external/book/content/book/it/v2/Git-Basics-Tagging.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Basics-Working-with-Remotes
     next: book/it/v2/Git-Basics-Git-Aliases
 title: Git - Tagging
+aliases:
+- "/book/it/Basi-di-Git-Suggerimenti-e-Trucchi.html"
+- "/book/it/v1/Basi-di-Git-Suggerimenti-e-Trucchi.html"
 ---
 <h2 id="r_git_tagging">Tagging</h2>
 <div class="paragraph">
