--- a/external/book/content/book/it/v2/Git-Basics-Undoing-Things.html
+++ b/external/book/content/book/it/v2/Git-Basics-Undoing-Things.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Basics-Viewing-the-Commit-History
     next: book/it/v2/Git-Basics-Working-with-Remotes
 title: Git - Undoing Things
+aliases:
+- "/book/it/Basi-di-Git-Annullare-le-Cose.html"
+- "/book/it/v1/Basi-di-Git-Annullare-le-Cose.html"
 ---
 <h2 id="_undoing">Undoing Things</h2>
 <div class="paragraph">
