--- a/external/book/content/book/it/v2/Git-Basics-Viewing-the-Commit-History.html
+++ b/external/book/content/book/it/v2/Git-Basics-Viewing-the-Commit-History.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Basics-Recording-Changes-to-the-Repository
     next: book/it/v2/Git-Basics-Undoing-Things
 title: Git - Viewing the Commit History
+aliases:
+- "/book/it/Basi-di-Git-Vedere-la-Storia-dei-Commit.html"
+- "/book/it/v1/Basi-di-Git-Vedere-la-Storia-dei-Commit.html"
 ---
 <h2 id="r_viewing_history">Viewing the Commit History</h2>
 <div class="paragraph">
