--- a/external/book/content/book/it/v2/Git-Basics-Working-with-Remotes.html
+++ b/external/book/content/book/it/v2/Git-Basics-Working-with-Remotes.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Basics-Undoing-Things
     next: book/it/v2/Git-Basics-Tagging
 title: Git - Working with Remotes
+aliases:
+- "/book/it/Basi-di-Git-Lavorare-con-Sorgenti-Remote.html"
+- "/book/it/v1/Basi-di-Git-Lavorare-con-Sorgenti-Remote.html"
 ---
 <h2 id="r_remote_repos">Working with Remotes</h2>
 <div class="paragraph">
