--- a/external/book/content/book/it/v2/Git-Branching-Branch-Management.html
+++ b/external/book/content/book/it/v2/Git-Branching-Branch-Management.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Branching-Basic-Branching-and-Merging
     next: book/it/v2/Git-Branching-Branching-Workflows
 title: Git - Branch Management
+aliases:
+- "/book/it/Diramazioni-in-Git-Amministrazione-dei-Rami.html"
+- "/book/it/v1/Diramazioni-in-Git-Amministrazione-dei-Rami.html"
 ---
 <h2 id="r_branch_management">Branch Management</h2>
 <div class="paragraph">
