--- a/external/book/content/book/it/v2/Git-Branching-Branching-Workflows.html
+++ b/external/book/content/book/it/v2/Git-Branching-Branching-Workflows.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Branching-Branch-Management
     next: book/it/v2/Git-Branching-Remote-Branches
 title: Git - Branching Workflows
+aliases:
+- "/book/it/Diramazioni-in-Git-Flusso-di-Lavoro-con-le-Ramificazioni.html"
+- "/book/it/v1/Diramazioni-in-Git-Flusso-di-Lavoro-con-le-Ramificazioni.html"
 ---
 <h2 id="_branching_workflows">Branching Workflows</h2>
 <div class="paragraph">
