--- a/external/book/content/book/it/v2/Git-Branching-Rebasing.html
+++ b/external/book/content/book/it/v2/Git-Branching-Rebasing.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Branching-Remote-Branches
     next: book/it/v2/Git-Branching-Summary
 title: Git - Rebasing
+aliases:
+- "/book/it/Diramazioni-in-Git-Rifondazione.html"
+- "/book/it/v1/Diramazioni-in-Git-Rifondazione.html"
 ---
 <h2 id="r_rebasing">Rebasing</h2>
 <div class="paragraph">
