--- a/external/book/content/book/it/v2/Git-Branching-Remote-Branches.html
+++ b/external/book/content/book/it/v2/Git-Branching-Remote-Branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Branching-Branching-Workflows
     next: book/it/v2/Git-Branching-Rebasing
 title: Git - Remote Branches
+aliases:
+- "/book/it/Diramazioni-in-Git-Rami-Remoti.html"
+- "/book/it/v1/Diramazioni-in-Git-Rami-Remoti.html"
 ---
 <h2 id="r_remote_branches">Remote Branches</h2>
 <div class="paragraph">
