--- a/external/book/content/book/it/v2/Git-Internals-Git-Objects.html
+++ b/external/book/content/book/it/v2/Git-Internals-Git-Objects.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-Plumbing-and-Porcelain
     next: book/it/v2/Git-Internals-Git-References
 title: Git - Git Objects
+aliases:
+- "/book/it/I-comandi-interni-di-Git-Gli-oggetti-di-Git.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Gli-oggetti-di-Git.html"
 ---
 <h2 id="r_objects">Git Objects</h2>
 <div class="paragraph">
