--- a/external/book/content/book/it/v2/Git-Internals-Git-References.html
+++ b/external/book/content/book/it/v2/Git-Internals-Git-References.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-Git-Objects
     next: book/it/v2/Git-Internals-Packfiles
 title: Git - Git References
+aliases:
+- "/book/it/I-comandi-interni-di-Git-I-riferimenti-di-Git.html"
+- "/book/it/v1/I-comandi-interni-di-Git-I-riferimenti-di-Git.html"
 ---
 <h2 id="r_git_refs">Git References</h2>
 <div class="paragraph">
