--- a/external/book/content/book/it/v2/Git-Internals-Packfiles.html
+++ b/external/book/content/book/it/v2/Git-Internals-Packfiles.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-Git-References
     next: book/it/v2/Git-Internals-The-Refspec
 title: Git - Packfiles
+aliases:
+- "/book/it/I-comandi-interni-di-Git-Pacchetti-di-file.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Pacchetti-di-file.html"
 ---
 <h2 id="_packfiles">Packfiles</h2>
 <div class="paragraph">
