--- a/external/book/content/book/it/v2/Git-Internals-Summary.html
+++ b/external/book/content/book/it/v2/Git-Internals-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-Environment-Variables
     next: book/it/v2/Appendice-A:-Git-in-altri-contesti-Graphical-Interfaces
 title: Git - Summary
+aliases:
+- "/book/it/I-comandi-interni-di-Git-Sommario.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Sommario.html"
 ---
 <h2 id="_summary_10">Summary</h2>
 <div class="paragraph">
