--- a/external/book/content/book/it/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/it/v2/Git-Internals-The-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-Packfiles
     next: book/it/v2/Git-Internals-Transfer-Protocols
 title: Git - The Refspec
+aliases:
+- "/book/it/I-comandi-interni-di-Git-Le-specifiche-di-riferimento-<em>refspec</em>.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Le-specifiche-di-riferimento-<em>refspec</em>.html"
 ---
 <h2 id="r_refspec">The Refspec</h2>
 <div class="paragraph">
