--- a/external/book/content/book/it/v2/Git-Internals-Transfer-Protocols.html
+++ b/external/book/content/book/it/v2/Git-Internals-Transfer-Protocols.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-The-Refspec
     next: book/it/v2/Git-Internals-Maintenance-and-Data-Recovery
 title: Git - Transfer Protocols
+aliases:
+- "/book/it/I-comandi-interni-di-Git-Protocolli-di-trasferimento.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Protocolli-di-trasferimento.html"
 ---
 <h2 id="_transfer_protocols">Transfer Protocols</h2>
 <div class="paragraph">
