--- a/external/book/content/book/it/v2/Git-and-Other-Systems-Git-as-a-Client.html
+++ b/external/book/content/book/it/v2/Git-and-Other-Systems-Git-as-a-Client.html
@@ -16,6 +16,11 @@ book:
     previous: book/it/v2/Customizing-Git-Summary
     next: book/it/v2/Git-and-Other-Systems-Migrating-to-Git
 title: Git - Git as a Client
+aliases:
+- "/book/it/Git-e-altri-sistemi.html"
+- "/book/it/v1/Git-e-altri-sistemi.html"
+- "/book/it/Git-e-altri-sistemi-Git-e-Subversion.html"
+- "/book/it/v1/Git-e-altri-sistemi-Git-e-Subversion.html"
 ---
 <p>The world isn’t perfect.
 Usually, you can’t immediately switch every project you come in contact with to Git.
