--- a/external/book/content/book/it/v2/Git-and-Other-Systems-Summary.html
+++ b/external/book/content/book/it/v2/Git-and-Other-Systems-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-and-Other-Systems-Migrating-to-Git
     next: book/it/v2/Git-Internals-Plumbing-and-Porcelain
 title: Git - Summary
+aliases:
+- "/book/it/Git-e-altri-sistemi-Summary.html"
+- "/book/it/v1/Git-e-altri-sistemi-Summary.html"
 ---
 <h2 id="_summary_9">Summary</h2>
 <div class="paragraph">
