--- a/external/book/content/book/it/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key.html
+++ b/external/book/content/book/it/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-on-the-Server-Getting-Git-on-a-Server
     next: book/it/v2/Git-on-the-Server-Setting-Up-the-Server
 title: Git - Generating Your SSH Public Key
+aliases:
+- "/book/it/Git-sul-Server-Generare-la-Propria-Chiave-Pubblica-SSH.html"
+- "/book/it/v1/Git-sul-Server-Generare-la-Propria-Chiave-Pubblica-SSH.html"
 ---
 <h2 id="r_generate_ssh_key">Generating Your SSH Public Key</h2>
 <div class="paragraph">
