--- a/external/book/content/book/it/v2/Git-on-the-Server-Getting-Git-on-a-Server.html
+++ b/external/book/content/book/it/v2/Git-on-the-Server-Getting-Git-on-a-Server.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-on-the-Server-The-Protocols
     next: book/it/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key
 title: Git - Getting Git on a Server
+aliases:
+- "/book/it/Git-sul-Server-Ottenere-Git-su-di-un-Server.html"
+- "/book/it/v1/Git-sul-Server-Ottenere-Git-su-di-un-Server.html"
 ---
 <h2 id="r_git_on_the_server">Getting Git on a Server</h2>
 <div class="paragraph">
