--- a/external/book/content/book/it/v2/Git-on-the-Server-Git-Daemon.html
+++ b/external/book/content/book/it/v2/Git-on-the-Server-Git-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-on-the-Server-Setting-Up-the-Server
     next: book/it/v2/Git-on-the-Server-Smart-HTTP
 title: Git - Git Daemon
+aliases:
+- "/book/it/Git-sul-Server-Demone-Git.html"
+- "/book/it/v1/Git-sul-Server-Demone-Git.html"
 ---
 <h2 id="_git_daemon">Git Daemon</h2>
 <div class="paragraph">
