--- a/external/book/content/book/it/v2/Git-on-the-Server-Setting-Up-the-Server.html
+++ b/external/book/content/book/it/v2/Git-on-the-Server-Setting-Up-the-Server.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key
     next: book/it/v2/Git-on-the-Server-Git-Daemon
 title: Git - Setting Up the Server
+aliases:
+- "/book/it/Git-sul-Server-Configurare-il-Server.html"
+- "/book/it/v1/Git-sul-Server-Configurare-il-Server.html"
 ---
 <h2 id="r_setting_up_server">Setting Up the Server</h2>
 <div class="paragraph">
