--- a/external/book/content/book/it/v2/Git-on-the-Server-Summary.html
+++ b/external/book/content/book/it/v2/Git-on-the-Server-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-on-the-Server-Third-Party-Hosted-Options
     next: book/it/v2/Distributed-Git-Distributed-Workflows
 title: Git - Summary
+aliases:
+- "/book/it/Git-sul-Server-Riassunto.html"
+- "/book/it/v1/Git-sul-Server-Riassunto.html"
 ---
 <h2 id="_summary_2">Summary</h2>
 <div class="paragraph">
