--- a/external/book/content/book/it/v2/Git-on-the-Server-Third-Party-Hosted-Options.html
+++ b/external/book/content/book/it/v2/Git-on-the-Server-Third-Party-Hosted-Options.html
@@ -16,6 +16,17 @@ book:
     previous: book/it/v2/Git-on-the-Server-GitLab
     next: book/it/v2/Git-on-the-Server-Summary
 title: Git - Third Party Hosted Options
+aliases:
+- "/book/it/Git-sul-Server-Accesso-Pubblico.html"
+- "/book/it/v1/Git-sul-Server-Accesso-Pubblico.html"
+- "/book/it/Git-sul-Server-GitWeb.html"
+- "/book/it/v1/Git-sul-Server-GitWeb.html"
+- "/book/it/Git-sul-Server-Gitosis.html"
+- "/book/it/v1/Git-sul-Server-Gitosis.html"
+- "/book/it/Git-sul-Server-Gitolite.html"
+- "/book/it/v1/Git-sul-Server-Gitolite.html"
+- "/book/it/Git-sul-Server-Hosted-Git.html"
+- "/book/it/v1/Git-sul-Server-Hosted-Git.html"
 ---
 <h2 id="_third_party_hosted_options">Third Party Hosted Options</h2>
 <div class="paragraph">
