--- a/external/book/content/book/it/v2/Per-Iniziare-Cos’é-Git?.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-Cos’é-Git?.html
@@ -19,6 +19,8 @@ title: Git - Cos’é Git?
 url: "/book/it/v2/Per-Iniziare-Cos’é-Git?.html"
 aliases:
 - "/book/it/v2/Per-Iniziare-Cos’é-Git.html"
+- "/book/it/Per-Iniziare-Basi-di-Git.html"
+- "/book/it/v1/Per-Iniziare-Basi-di-Git.html"
 ---
 <h2 id="_cosé_git">Cos’é Git?</h2>
 <div class="paragraph">
