--- a/external/book/content/book/it/v2/Per-Iniziare-First-Time-Git-Setup.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-First-Time-Git-Setup.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Per-Iniziare-Installing-Git
     next: book/it/v2/Per-Iniziare-Chiedere-aiuto
 title: Git - First-Time Git Setup
+aliases:
+- "/book/it/Per-Iniziare-Prima-Configurazione-di-Git.html"
+- "/book/it/v1/Per-Iniziare-Prima-Configurazione-di-Git.html"
 ---
 <h2 id="r_first_time">First-Time Git Setup</h2>
 <div class="paragraph">
