--- a/external/book/content/book/it/v2/Per-Iniziare-Installing-Git.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-Installing-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Per-Iniziare-La-riga-di-comando
     next: book/it/v2/Per-Iniziare-First-Time-Git-Setup
 title: Git - Installing Git
+aliases:
+- "/book/it/Per-Iniziare-Installare-Git.html"
+- "/book/it/v1/Per-Iniziare-Installare-Git.html"
 ---
 <h2 id="_installing_git">Installing Git</h2>
 <div class="paragraph">
