--- a/external/book/content/book/it/v2/Per-Iniziare-Una-Breve-Storia-di-Git.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-Una-Breve-Storia-di-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Per-Iniziare-Il-Controllo-di-Versione
     next: book/it/v2/Per-Iniziare-Cos’é-Git%3F
 title: Git - Una Breve Storia di Git
+aliases:
+- "/book/it/Per-Iniziare-Una-Breve-Storia-di-Git.html"
+- "/book/it/v1/Per-Iniziare-Una-Breve-Storia-di-Git.html"
 ---
 <h2 id="_una_breve_storia_di_git">Una Breve Storia di Git</h2>
 <div class="paragraph">
