--- a/external/book/content/book/it/v2/Customizing-Git-Git-Configuration.html
+++ b/external/book/content/book/it/v2/Customizing-Git-Git-Configuration.html
@@ -16,6 +16,11 @@ book:
     previous: book/it/v2/Git-Tools-Summary
     next: book/it/v2/Customizing-Git-Git-Attributes
 title: Git - Git Configuration
+aliases:
+- "/book/it/Customizing-Git.html"
+- "/book/it/v1/Customizing-Git.html"
+- "/book/it/Customizing-Git-Configurazione-di-Git.html"
+- "/book/it/v1/Customizing-Git-Configurazione-di-Git.html"
 ---
 <p>So far, we’ve covered the basics of how Git works and how to use it, and we’ve introduced a number of tools that Git provides to help you use it easily and efficiently.
 In this chapter, we’ll see how you can make Git operate in a more customized fashion, by introducing several important configuration settings and the hooks system.
