--- a/external/book/content/book/it/v2/Git-Basics-Git-Aliases.html
+++ b/external/book/content/book/it/v2/Git-Basics-Git-Aliases.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Basics-Tagging
     next: book/it/v2/Git-Basics-Sommario
 title: Git - Git Aliases
+aliases:
+- "/book/it/Basi-di-Git-Riassunto.html"
+- "/book/it/v1/Basi-di-Git-Riassunto.html"
 ---
 <h2 id="r_git_aliases">Git Aliases</h2>
 <div class="paragraph">
