--- a/external/book/content/book/it/v2/Git-Branching-Basic-Branching-and-Merging.html
+++ b/external/book/content/book/it/v2/Git-Branching-Basic-Branching-and-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Branching-Branches-in-a-Nutshell
     next: book/it/v2/Git-Branching-Branch-Management
 title: Git - Basic Branching and Merging
+aliases:
+- "/book/it/Diramazioni-in-Git-Basi-di-Diramazione-e-Fusione.html"
+- "/book/it/v1/Diramazioni-in-Git-Basi-di-Diramazione-e-Fusione.html"
 ---
 <h2 id="_basic_branching_and_merging">Basic Branching and Merging</h2>
 <div class="paragraph">
