--- a/external/book/content/book/it/v2/Git-Branching-Branches-in-a-Nutshell.html
+++ b/external/book/content/book/it/v2/Git-Branching-Branches-in-a-Nutshell.html
@@ -16,6 +16,11 @@ book:
     previous: book/it/v2/Git-Basics-Sommario
     next: book/it/v2/Git-Branching-Basic-Branching-and-Merging
 title: Git - Branches in a Nutshell
+aliases:
+- "/book/it/Diramazioni-in-Git.html"
+- "/book/it/v1/Diramazioni-in-Git.html"
+- "/book/it/Diramazioni-in-Git-Cos-è-un-Ramo.html"
+- "/book/it/v1/Diramazioni-in-Git-Cos-è-un-Ramo.html"
 ---
 <p>
 Nearly every VCS has some form of branching support.
