--- a/external/book/content/book/it/v2/Git-Branching-Summary.html
+++ b/external/book/content/book/it/v2/Git-Branching-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Branching-Rebasing
     next: book/it/v2/Git-on-the-Server-The-Protocols
 title: Git - Summary
+aliases:
+- "/book/it/Diramazioni-in-Git-Riassunto.html"
+- "/book/it/v1/Diramazioni-in-Git-Riassunto.html"
 ---
 <h2 id="_summary">Summary</h2>
 <div class="paragraph">
