--- a/external/book/content/book/it/v2/Git-Internals-Maintenance-and-Data-Recovery.html
+++ b/external/book/content/book/it/v2/Git-Internals-Maintenance-and-Data-Recovery.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-Internals-Transfer-Protocols
     next: book/it/v2/Git-Internals-Environment-Variables
 title: Git - Maintenance and Data Recovery
+aliases:
+- "/book/it/I-comandi-interni-di-Git-Maintenance-and-Data-Recovery.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Maintenance-and-Data-Recovery.html"
 ---
 <h2 id="_maintenance_and_data_recovery">Maintenance and Data Recovery</h2>
 <div class="paragraph">
