--- a/external/book/content/book/it/v2/Git-Internals-Plumbing-and-Porcelain.html
+++ b/external/book/content/book/it/v2/Git-Internals-Plumbing-and-Porcelain.html
@@ -16,6 +16,11 @@ book:
     previous: book/it/v2/Git-and-Other-Systems-Summary
     next: book/it/v2/Git-Internals-Git-Objects
 title: Git - Plumbing and Porcelain
+aliases:
+- "/book/it/I-comandi-interni-di-Git.html"
+- "/book/it/v1/I-comandi-interni-di-Git.html"
+- "/book/it/I-comandi-interni-di-Git-Impianto-e-sanitari.html"
+- "/book/it/v1/I-comandi-interni-di-Git-Impianto-e-sanitari.html"
 ---
 <p>You may have skipped to this chapter from a previous chapter, or you may have gotten here after reading the rest of the book – in either case, this is where we’ll go over the inner workings and implementation of Git.
 We found that learning this information was fundamentally important to understanding how useful and powerful Git is, but others have argued to us that it can be confusing and unnecessarily complex for beginners.
