--- a/external/book/content/book/it/v2/Git-and-Other-Systems-Migrating-to-Git.html
+++ b/external/book/content/book/it/v2/Git-and-Other-Systems-Migrating-to-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Git-and-Other-Systems-Git-as-a-Client
     next: book/it/v2/Git-and-Other-Systems-Summary
 title: Git - Migrating to Git
+aliases:
+- "/book/it/Git-e-altri-sistemi-Migrare-a-Git.html"
+- "/book/it/v1/Git-e-altri-sistemi-Migrare-a-Git.html"
 ---
 <h2 id="r_migrating">Migrating to Git</h2>
 <div class="paragraph">
