--- a/external/book/content/book/it/v2/Per-Iniziare-Chiedere-aiuto.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-Chiedere-aiuto.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Per-Iniziare-First-Time-Git-Setup
     next: book/it/v2/Per-Iniziare-Sommario
 title: Git - Chiedere aiuto
+aliases:
+- "/book/it/Per-Iniziare-Ottenere-Aiuto.html"
+- "/book/it/v1/Per-Iniziare-Ottenere-Aiuto.html"
 ---
 <h2 id="r_git_help">Chiedere aiuto</h2>
 <div class="paragraph">
