--- a/external/book/content/book/it/v2/Per-Iniziare-Il-Controllo-di-Versione.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-Il-Controllo-di-Versione.html
@@ -16,6 +16,11 @@ book:
     previous: book/it/v2/Per-Iniziare-Il-Controllo-di-Versione
     next: book/it/v2/Per-Iniziare-Una-Breve-Storia-di-Git
 title: Git - Il Controllo di Versione
+aliases:
+- "/book/it/Per-Iniziare.html"
+- "/book/it/v1/Per-Iniziare.html"
+- "/book/it/Per-Iniziare-Il-Controllo-di-Versione.html"
+- "/book/it/v1/Per-Iniziare-Il-Controllo-di-Versione.html"
 ---
 <p>Questo capitolo spiegherà come iniziare ad usare Git.
 Inizieremo con una introduzione sugli strumenti per il controllo delle versioni, per poi passare a come far funzionare Git sul proprio sistema e quindi come configurarlo per lavorarci.
