--- a/external/book/content/book/it/v2/Per-Iniziare-Sommario.html
+++ b/external/book/content/book/it/v2/Per-Iniziare-Sommario.html
@@ -16,6 +16,9 @@ book:
     previous: book/it/v2/Per-Iniziare-Chiedere-aiuto
     next: book/it/v2/Git-Basics-Getting-a-Git-Repository
 title: Git - Sommario
+aliases:
+- "/book/it/Per-Iniziare-Riassunto.html"
+- "/book/it/v1/Per-Iniziare-Riassunto.html"
 ---
 <h2 id="_sommario">Sommario</h2>
 <div class="paragraph">
