--- a/external/book/content/book/it/v2/_index.html
+++ b/external/book/content/book/it/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/it/v2.html"
 aliases:
 - "/book/it/v2/index.html"
+- "/book/it/v1/index.html"
 - "/book/it/index.html"
 ---
