book: update ko
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/ko/v2/Git-도구-Stashing과-Cleaning.html
+++ b/external/book/content/book/ko/v2/Git-도구-Stashing과-Cleaning.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-도구-내-작업에-서명하기
 title: Git - Stashing과 Cleaning
 url: "/book/ko/v2/Git-도구-Stashing과-Cleaning.html"
+aliases:
+- "/book/ko/Git-도구-Stashing.html"
+- "/book/ko/v1/Git-도구-Stashing.html"
 ---
 <h2 id="_git_stashing">Stashing과 Cleaning</h2>
 <div class="paragraph">
