--- a/external/book/content/book/ko/v2/Git-도구-고급-Merge.html
+++ b/external/book/content/book/ko/v2/Git-도구-고급-Merge.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-도구-Rerere
 title: Git - 고급 Merge
 url: "/book/ko/v2/Git-도구-고급-Merge.html"
+aliases:
+- "/book/ko/Git-도구-Subtree-Merge.html"
+- "/book/ko/v1/Git-도구-Subtree-Merge.html"
 ---
 <h2 id="_advanced_merging">고급 Merge</h2>
 <div class="paragraph">
