--- a/external/book/content/book/ko/v2/Git-도구-대화형-명령.html
+++ b/external/book/content/book/ko/v2/Git-도구-대화형-명령.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-도구-Stashing과-Cleaning
 title: Git - 대화형 명령
 url: "/book/ko/v2/Git-도구-대화형-명령.html"
+aliases:
+- "/book/ko/Git-도구-대화형-명령어.html"
+- "/book/ko/v1/Git-도구-대화형-명령어.html"
 ---
 <h2 id="_interactive_staging">대화형 명령</h2>
 <div class="paragraph">
