--- a/external/book/content/book/ko/v2/Git-도구-리비전-조회하기.html
+++ b/external/book/content/book/ko/v2/Git-도구-리비전-조회하기.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git-도구-대화형-명령
 title: Git - 리비전 조회하기
 url: "/book/ko/v2/Git-도구-리비전-조회하기.html"
+aliases:
+- "/book/ko/Git-도구.html"
+- "/book/ko/v1/Git-도구.html"
+- "/book/ko/Git-도구-리비전-조회하기.html"
+- "/book/ko/v1/Git-도구-리비전-조회하기.html"
 ---
 <p>지금까지 일상적으로 자주 사용하는 명령들과 몇 가지 워크플로를 배웠다.
 파일을 추적하고 커밋하는 등의 기본적인 명령뿐만 아니라 Staging Area가 왜 좋은지도 배웠고 가볍게 토픽 브랜치를 만들고 Merge 하는 방법도 다뤘다. 이제는 Git 저장소로 충분히 소스코드를 관리할 수 있을 것이다.</p><p>이 장에서는 일상적으로 사용하지는 않지만 위급한 상황에서 반드시 필요한 Git 도구를 살펴본다.</p>
