--- a/external/book/content/book/ko/v2/Git-도구-요약.html
+++ b/external/book/content/book/ko/v2/Git-도구-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git맞춤-Git-설정하기
 title: Git - 요약
 url: "/book/ko/v2/Git-도구-요약.html"
+aliases:
+- "/book/ko/Git-도구-요약.html"
+- "/book/ko/v1/Git-도구-요약.html"
 ---
 <h2 id="_요약_9">요약</h2>
 <div class="paragraph">
