--- a/external/book/content/book/ko/v2/Git-도구-히스토리-단장하기.html
+++ b/external/book/content/book/ko/v2/Git-도구-히스토리-단장하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-도구-Reset-명확히-알고-가기
 title: Git - 히스토리 단장하기
 url: "/book/ko/v2/Git-도구-히스토리-단장하기.html"
+aliases:
+- "/book/ko/Git-도구-히스토리-단장하기.html"
+- "/book/ko/v1/Git-도구-히스토리-단장하기.html"
 ---
 <h2 id="_rewriting_history">히스토리 단장하기</h2>
 <div class="paragraph">
