--- a/external/book/content/book/ko/v2/Git-브랜치-브랜치란-무엇인가.html
+++ b/external/book/content/book/ko/v2/Git-브랜치-브랜치란-무엇인가.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git-브랜치-브랜치와-Merge-의-기초
 title: Git - 브랜치란 무엇인가
 url: "/book/ko/v2/Git-브랜치-브랜치란-무엇인가.html"
+aliases:
+- "/book/ko/Git-브랜치.html"
+- "/book/ko/v1/Git-브랜치.html"
+- "/book/ko/Git-브랜치-브랜치란-무엇인가?.html"
+- "/book/ko/v1/Git-브랜치-브랜치란-무엇인가?.html"
 ---
 <p></p><p>모든 버전 관리 시스템은 브랜치를 지원한다.
 개발을 하다 보면 코드를 여러 개로 복사해야 하는 일이 자주 생긴다.
