--- a/external/book/content/book/ko/v2/Git-브랜치-브랜치와-Merge-의-기초.html
+++ b/external/book/content/book/ko/v2/Git-브랜치-브랜치와-Merge-의-기초.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-브랜치-브랜치-관리
 title: Git - 브랜치와 Merge 의 기초
 url: "/book/ko/v2/Git-브랜치-브랜치와-Merge-의-기초.html"
+aliases:
+- "/book/ko/Git-브랜치-브랜치와-Merge의-기초.html"
+- "/book/ko/v1/Git-브랜치-브랜치와-Merge의-기초.html"
 ---
 <h2 id="_브랜치와_merge_의_기초">브랜치와 Merge 의 기초</h2>
 <div class="paragraph">
