--- a/external/book/content/book/ko/v2/Git-서버-Git-데몬.html
+++ b/external/book/content/book/ko/v2/Git-서버-Git-데몬.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-서버-스마트-HTTP
 title: Git - Git 데몬
 url: "/book/ko/v2/Git-서버-Git-데몬.html"
+aliases:
+- "/book/ko/Git-서버-Git-데몬.html"
+- "/book/ko/v1/Git-서버-Git-데몬.html"
 ---
 <h2 id="_git_데몬">Git 데몬</h2>
 <div class="paragraph">
