--- a/external/book/content/book/ko/v2/Git-서버-SSH-공개키-만들기.html
+++ b/external/book/content/book/ko/v2/Git-서버-SSH-공개키-만들기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-서버-서버-설정하기
 title: Git - SSH 공개키 만들기
 url: "/book/ko/v2/Git-서버-SSH-공개키-만들기.html"
+aliases:
+- "/book/ko/Git-서버-SSH-공개키-만들기.html"
+- "/book/ko/v1/Git-서버-SSH-공개키-만들기.html"
 ---
 <h2 id="_generate_ssh_key">SSH 공개키 만들기</h2>
 <div class="paragraph">
