--- a/external/book/content/book/ko/v2/Git-서버-또-다른-선택지,-호스팅.html
+++ b/external/book/content/book/ko/v2/Git-서버-또-다른-선택지,-호스팅.html
@@ -17,6 +17,17 @@ book:
     next: book/ko/v2/Git-서버-요약
 title: Git - 또 다른 선택지, 호스팅
 url: "/book/ko/v2/Git-서버-또-다른-선택지,-호스팅.html"
+aliases:
+- "/book/ko/Git-서버-공개하기.html"
+- "/book/ko/v1/Git-서버-공개하기.html"
+- "/book/ko/Git-서버-GitWeb.html"
+- "/book/ko/v1/Git-서버-GitWeb.html"
+- "/book/ko/Git-서버-Gitosis.html"
+- "/book/ko/v1/Git-서버-Gitosis.html"
+- "/book/ko/Git-서버-Gitolite.html"
+- "/book/ko/v1/Git-서버-Gitolite.html"
+- "/book/ko/Git-서버-Hosted-Git.html"
+- "/book/ko/v1/Git-서버-Hosted-Git.html"
 ---
 <h2 id="_또_다른_선택지_호스팅">또 다른 선택지, 호스팅</h2>
 <div class="paragraph">
