--- a/external/book/content/book/ko/v2/Git-서버-서버-설정하기.html
+++ b/external/book/content/book/ko/v2/Git-서버-서버-설정하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-서버-Git-데몬
 title: Git - 서버 설정하기
 url: "/book/ko/v2/Git-서버-서버-설정하기.html"
+aliases:
+- "/book/ko/Git-서버-서버에-설정하기.html"
+- "/book/ko/v1/Git-서버-서버에-설정하기.html"
 ---
 <h2 id="_setting_up_server">서버 설정하기</h2>
 <div class="paragraph">
