--- a/external/book/content/book/ko/v2/Git-서버-서버에-Git-설치하기.html
+++ b/external/book/content/book/ko/v2/Git-서버-서버에-Git-설치하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-서버-SSH-공개키-만들기
 title: Git - 서버에 Git 설치하기
 url: "/book/ko/v2/Git-서버-서버에-Git-설치하기.html"
+aliases:
+- "/book/ko/Git-서버-서버에-Git-설치하기.html"
+- "/book/ko/v1/Git-서버-서버에-Git-설치하기.html"
 ---
 <h2 id="_getting_git_on_a_server">서버에 Git 설치하기</h2>
 <div class="paragraph">
