--- a/external/book/content/book/ko/v2/Git-서버-프로토콜.html
+++ b/external/book/content/book/ko/v2/Git-서버-프로토콜.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git-서버-서버에-Git-설치하기
 title: Git - 프로토콜
 url: "/book/ko/v2/Git-서버-프로토콜.html"
+aliases:
+- "/book/ko/Git-서버.html"
+- "/book/ko/v1/Git-서버.html"
+- "/book/ko/Git-서버-프로토콜.html"
+- "/book/ko/v1/Git-서버-프로토콜.html"
 ---
 <p></p><p>이 글을 읽는 독자라면 이미 하루 업무의 대부분을 Git으로 처리할 수 있을 거라고 생각한다.
 이제는 다른 사람과 협업하는 방법을 고민해보자.
