--- a/external/book/content/book/ko/v2/Git과-여타-버전-관리-시스템-Git:-범용-Client.html
+++ b/external/book/content/book/ko/v2/Git과-여타-버전-관리-시스템-Git:-범용-Client.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git과-여타-버전-관리-시스템-Git으로-옮기기
 title: 'Git - Git: 범용 Client'
 url: "/book/ko/v2/Git과-여타-버전-관리-시스템-Git:-범용-Client.html"
+aliases:
+- "/book/ko/Git으로-이전하기.html"
+- "/book/ko/v1/Git으로-이전하기.html"
+- "/book/ko/Git으로-이전하기-Git과-Subversion.html"
+- "/book/ko/v1/Git으로-이전하기-Git과-Subversion.html"
 ---
 <p>세상 일은 뜻대로 되지 않는다.
 진행하던 프로젝트를 모두 한 번에 Git 저장소로 옮기기는 어렵다.
