--- a/external/book/content/book/ko/v2/Git과-여타-버전-관리-시스템-Git으로-옮기기.html
+++ b/external/book/content/book/ko/v2/Git과-여타-버전-관리-시스템-Git으로-옮기기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git과-여타-버전-관리-시스템-요약
 title: Git - Git으로 옮기기
 url: "/book/ko/v2/Git과-여타-버전-관리-시스템-Git으로-옮기기.html"
+aliases:
+- "/book/ko/Git으로-이전하기-Git으로-옮기기.html"
+- "/book/ko/v1/Git으로-이전하기-Git으로-옮기기.html"
 ---
 <h2 id="_migrating">Git으로 옮기기</h2>
 <div class="paragraph">
