--- a/external/book/content/book/ko/v2/Git과-여타-버전-관리-시스템-요약.html
+++ b/external/book/content/book/ko/v2/Git과-여타-버전-관리-시스템-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-Plumbing-명령과-Porcelain-명령
 title: Git - 요약
 url: "/book/ko/v2/Git과-여타-버전-관리-시스템-요약.html"
+aliases:
+- "/book/ko/Git으로-이전하기-요약.html"
+- "/book/ko/v1/Git으로-이전하기-요약.html"
 ---
 <h2 id="_요약_12">요약</h2>
 <div class="paragraph">
