--- a/external/book/content/book/ko/v2/Git맞춤-Git-Attributes.html
+++ b/external/book/content/book/ko/v2/Git맞춤-Git-Attributes.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git맞춤-Git-Hooks
 title: Git - Git Attributes
 url: "/book/ko/v2/Git맞춤-Git-Attributes.html"
+aliases:
+- "/book/ko/Git맞춤-Git-Attribute.html"
+- "/book/ko/v1/Git맞춤-Git-Attribute.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
