--- a/external/book/content/book/ko/v2/Git맞춤-Git-Hooks.html
+++ b/external/book/content/book/ko/v2/Git맞춤-Git-Hooks.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git맞춤-정책-구현하기
 title: Git - Git Hooks
 url: "/book/ko/v2/Git맞춤-Git-Hooks.html"
+aliases:
+- "/book/ko/Git맞춤-Git-훅.html"
+- "/book/ko/v1/Git맞춤-Git-훅.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
