--- a/external/book/content/book/ko/v2/Git맞춤-Git-설정하기.html
+++ b/external/book/content/book/ko/v2/Git맞춤-Git-설정하기.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git맞춤-Git-Attributes
 title: Git - Git 설정하기
 url: "/book/ko/v2/Git맞춤-Git-설정하기.html"
+aliases:
+- "/book/ko/Git맞춤.html"
+- "/book/ko/v1/Git맞춤.html"
+- "/book/ko/Git맞춤-Git-설정하기.html"
+- "/book/ko/v1/Git맞춤-Git-설정하기.html"
 ---
 <p>지금까지 Git이 어떻게 동작하고 Git을 어떻게 사용하는지 설명했다. 이제 Git을 좀 더 쉽고 편하게 사용할 수 있도록 도와주는 도구를 살펴본다.
 이 장에서는 먼저 많이 쓰이는 설정 그리고 훅 시스템을 먼저 설명한다. 그 후에 Git을 내게 맞추어(Customize) 본다.
