--- a/external/book/content/book/ko/v2/Git의-기초-Git-Alias.html
+++ b/external/book/content/book/ko/v2/Git의-기초-Git-Alias.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-기초-요약
 title: Git - Git Alias
 url: "/book/ko/v2/Git의-기초-Git-Alias.html"
+aliases:
+- "/book/ko/Git의-기초-팁과-트릭.html"
+- "/book/ko/v1/Git의-기초-팁과-트릭.html"
 ---
 <h2 id="_git_aliases">Git Alias</h2>
 <div class="paragraph">
