--- a/external/book/content/book/ko/v2/Git의-기초-Git-저장소-만들기.html
+++ b/external/book/content/book/ko/v2/Git의-기초-Git-저장소-만들기.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git의-기초-수정하고-저장소에-저장하기
 title: Git - Git 저장소 만들기
 url: "/book/ko/v2/Git의-기초-Git-저장소-만들기.html"
+aliases:
+- "/book/ko/Git의-기초.html"
+- "/book/ko/v1/Git의-기초.html"
+- "/book/ko/Git의-기초-Git-저장소-만들기.html"
+- "/book/ko/v1/Git의-기초-Git-저장소-만들기.html"
 ---
 <p>Git을 사용하는 방법을 알고 싶은데 한 챕터밖에 읽을 시간이 없다면 이번 챕터를 읽어야 한다.
 Git에서 자주 사용하는 명령어는 모두 2장에 등장한다.
