--- a/external/book/content/book/ko/v2/Git의-기초-요약.html
+++ b/external/book/content/book/ko/v2/Git의-기초-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-브랜치-브랜치란-무엇인가
 title: Git - 요약
 url: "/book/ko/v2/Git의-기초-요약.html"
+aliases:
+- "/book/ko/Git의-기초-요약.html"
+- "/book/ko/v1/Git의-기초-요약.html"
 ---
 <h2 id="_요약_2">요약</h2>
 <div class="paragraph">
