--- a/external/book/content/book/ko/v2/Git의-내부-Git-Refs.html
+++ b/external/book/content/book/ko/v2/Git의-내부-Git-Refs.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-Packfile
 title: Git - Git Refs
 url: "/book/ko/v2/Git의-내부-Git-Refs.html"
+aliases:
+- "/book/ko/Git의-내부-Git-레퍼런스.html"
+- "/book/ko/v1/Git의-내부-Git-레퍼런스.html"
 ---
 <h2 id="_git_refs">Git Refs</h2>
 <div class="paragraph">
