--- a/external/book/content/book/ko/v2/Git의-내부-Git-개체.html
+++ b/external/book/content/book/ko/v2/Git의-내부-Git-개체.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-Git-Refs
 title: Git - Git 개체
 url: "/book/ko/v2/Git의-내부-Git-개체.html"
+aliases:
+- "/book/ko/Git의-내부-Git-개체.html"
+- "/book/ko/v1/Git의-내부-Git-개체.html"
 ---
 <h2 id="_objects">Git 개체</h2>
 <div class="paragraph">
