--- a/external/book/content/book/ko/v2/Git의-내부-Packfile.html
+++ b/external/book/content/book/ko/v2/Git의-내부-Packfile.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-Refspec
 title: Git - Packfile
 url: "/book/ko/v2/Git의-내부-Packfile.html"
+aliases:
+- "/book/ko/Git의-내부-Packfile.html"
+- "/book/ko/v1/Git의-내부-Packfile.html"
 ---
 <h2 id="_packfile">Packfile</h2>
 <div class="paragraph">
