--- a/external/book/content/book/ko/v2/Git의-내부-Plumbing-명령과-Porcelain-명령.html
+++ b/external/book/content/book/ko/v2/Git의-내부-Plumbing-명령과-Porcelain-명령.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/Git의-내부-Git-개체
 title: Git - Plumbing 명령과 Porcelain 명령
 url: "/book/ko/v2/Git의-내부-Plumbing-명령과-Porcelain-명령.html"
+aliases:
+- "/book/ko/Git의-내부.html"
+- "/book/ko/v1/Git의-내부.html"
+- "/book/ko/Git의-내부-Plumbing-명령과-Porcelain-명령.html"
+- "/book/ko/v1/Git의-내부-Plumbing-명령과-Porcelain-명령.html"
 ---
 <p>여기까지 다 읽고 왔든지 바로 여기부터 보기 시작했던지 간에 이제 마지막 장이다. 이번 장은 Git이 어떻게 구현돼 있고 내부적으로 어떻게 동작하는지 설명한다.
 Git이 얼마나 유용하고 강력한지 이해하려면 이 장의 내용을 꼭 알아야 한다. 이 장은 초보자에게 너무 혼란스럽고 불필요한 내용이라고 이야기하는 사람들도 있다.
