--- a/external/book/content/book/ko/v2/Git의-내부-Refspec.html
+++ b/external/book/content/book/ko/v2/Git의-내부-Refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-데이터-전송-프로토콜
 title: Git - Refspec
 url: "/book/ko/v2/Git의-내부-Refspec.html"
+aliases:
+- "/book/ko/Git의-내부-Refspec.html"
+- "/book/ko/v1/Git의-내부-Refspec.html"
 ---
 <h2 id="_refspec">Refspec</h2>
 <div class="paragraph">
