--- a/external/book/content/book/ko/v2/Git의-내부-요약.html
+++ b/external/book/content/book/ko/v2/Git의-내부-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/부록-A:-다양한-환경에서-Git-사용하기-GUI
 title: Git - 요약
 url: "/book/ko/v2/Git의-내부-요약.html"
+aliases:
+- "/book/ko/Git의-내부-요약.html"
+- "/book/ko/v1/Git의-내부-요약.html"
 ---
 <h2 id="_요약_13">요약</h2>
 <div class="paragraph">
