--- a/external/book/content/book/ko/v2/_index.html
+++ b/external/book/content/book/ko/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/ko/v2.html"
 aliases:
 - "/book/ko/v2/index.html"
+- "/book/ko/v1/index.html"
 - "/book/ko/index.html"
 ---
