--- a/external/book/content/book/ko/v2/부록-C:-Git-명령어-설치와-설정.html
+++ b/external/book/content/book/ko/v2/부록-C:-Git-명령어-설치와-설정.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/부록-C:-Git-명령어-프로젝트-가져오기와-생성하기
 title: Git - 설치와 설정
 url: "/book/ko/v2/부록-C:-Git-명령어-설치와-설정.html"
+aliases:
+- "/book/ko/commands.html"
+- "/book/ko/v1/commands.html"
 ---
 <p>이 책에서 Git 명령어를 많이 설명하지만, Git을 설명하기 위해서 중간마다 설명하는 것뿐이다. 설명을 방해할 수 있기 때문에 명령어 중심으로 살펴보지 않는다.
 이 장에서는 여기저기 흩어져 있는 명령어 사용법을 한눈에 볼 수 있도록 정리한다.</p><p>책 전체에서 언급했던 Git 명령어를 전부 살펴보는데 명령어를 용도에 따라 그룹으로 묶어 놓았다. 해당 명령어를 어디에 쓰는지 설명하고 어디에서 찾아볼 수 있는지도 표기한다.</p>
