--- a/external/book/content/book/ko/v2/분산-환경에서의-Git-분산-환경에서의-워크플로.html
+++ b/external/book/content/book/ko/v2/분산-환경에서의-Git-분산-환경에서의-워크플로.html
@@ -17,6 +17,11 @@ book:
     next: book/ko/v2/분산-환경에서의-Git-프로젝트에-기여하기
 title: Git - 분산 환경에서의 워크플로
 url: "/book/ko/v2/분산-환경에서의-Git-분산-환경에서의-워크플로.html"
+aliases:
+- "/book/ko/분산-환경에서의-Git.html"
+- "/book/ko/v1/분산-환경에서의-Git.html"
+- "/book/ko/분산-환경에서의-Git-분산-환경에서의-Workflow.html"
+- "/book/ko/v1/분산-환경에서의-Git-분산-환경에서의-Workflow.html"
 ---
 <p></p><p>앞 장에서 다른 개발자와 코드를 공유하는 리모트 저장소를 만드는 법을 배웠다. 로컬에서 작업하는 데 필요한 기본적인 명령어에는 어느 정도 익숙해졌다. 이제는 분산 환경에서 Git이 제공하는 기능을 어떻게 효율적으로 사용할지를 배운다.</p><p>이번 장에서는 분산 환경에서 Git을 어떻게 사용할 수 있을지 살펴본다. 프로젝트 기여자 입장과 여러 수정사항을 취합하는 관리자 입장에서 두루 살펴본다.
 즉, 프로젝트 기여자 또는 관리자로서 작업물을 프로젝트에 어떻게 포함시킬지와 수 많은 개발자가 수행한 일을 취합하고 프로젝트를 운영하는 방법을 배운다.</p>
