--- a/external/book/content/book/ko/v2/분산-환경에서의-Git-요약.html
+++ b/external/book/content/book/ko/v2/분산-환경에서의-Git-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/GitHub-계정-만들고-설정하기
 title: Git - 요약
 url: "/book/ko/v2/분산-환경에서의-Git-요약.html"
+aliases:
+- "/book/ko/분산-환경에서의-Git-요약.html"
+- "/book/ko/v1/분산-환경에서의-Git-요약.html"
 ---
 <h2 id="_요약_6">요약</h2>
 <div class="paragraph">
