--- a/external/book/content/book/ko/v2/분산-환경에서의-Git-프로젝트-관리하기.html
+++ b/external/book/content/book/ko/v2/분산-환경에서의-Git-프로젝트-관리하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/분산-환경에서의-Git-요약
 title: Git - 프로젝트 관리하기
 url: "/book/ko/v2/분산-환경에서의-Git-프로젝트-관리하기.html"
+aliases:
+- "/book/ko/분산-환경에서의-Git-프로젝트-운영하기.html"
+- "/book/ko/v1/분산-환경에서의-Git-프로젝트-운영하기.html"
 ---
 <h2 id="_프로젝트_관리하기">프로젝트 관리하기</h2>
 <div class="paragraph">
