--- a/external/book/content/book/ko/v2/분산-환경에서의-Git-프로젝트에-기여하기.html
+++ b/external/book/content/book/ko/v2/분산-환경에서의-Git-프로젝트에-기여하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/분산-환경에서의-Git-프로젝트-관리하기
 title: Git - 프로젝트에 기여하기
 url: "/book/ko/v2/분산-환경에서의-Git-프로젝트에-기여하기.html"
+aliases:
+- "/book/ko/분산-환경에서의-Git-프로젝트에-기여하기.html"
+- "/book/ko/v1/분산-환경에서의-Git-프로젝트에-기여하기.html"
 ---
 <h2 id="_contributing_project">프로젝트에 기여하기</h2>
 <div class="paragraph">
