--- a/external/book/content/book/ko/v2/시작하기-Git-설치.html
+++ b/external/book/content/book/ko/v2/시작하기-Git-설치.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/시작하기-Git-최초-설정
 title: Git - Git 설치
 url: "/book/ko/v2/시작하기-Git-설치.html"
+aliases:
+- "/book/ko/시작하기-Git-설치.html"
+- "/book/ko/v1/시작하기-Git-설치.html"
 ---
 <h2 id="_git_설치">Git 설치</h2>
 <div class="paragraph">
