--- a/external/book/content/book/ko/v2/시작하기-도움말-보기.html
+++ b/external/book/content/book/ko/v2/시작하기-도움말-보기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/시작하기-요약
 title: Git - 도움말 보기
 url: "/book/ko/v2/시작하기-도움말-보기.html"
+aliases:
+- "/book/ko/시작하기-도움말-보기.html"
+- "/book/ko/v1/시작하기-도움말-보기.html"
 ---
 <h2 id="_git_help">도움말 보기</h2>
 <div class="paragraph">
