--- a/external/book/content/book/ko/v2/시작하기-짧게-보는-Git의-역사.html
+++ b/external/book/content/book/ko/v2/시작하기-짧게-보는-Git의-역사.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/시작하기-Git-기초
 title: Git - 짧게 보는 Git의 역사
 url: "/book/ko/v2/시작하기-짧게-보는-Git의-역사.html"
+aliases:
+- "/book/ko/시작하기-짧게-보는-Git의-역사.html"
+- "/book/ko/v1/시작하기-짧게-보는-Git의-역사.html"
 ---
 <h2 id="_짧게_보는_git의_역사">짧게 보는 Git의 역사</h2>
 <div class="paragraph">
