--- a/external/book/content/book/ko/v2/Git-도구-Git으로-버그-찾기.html
+++ b/external/book/content/book/ko/v2/Git-도구-Git으로-버그-찾기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-도구-서브모듈
 title: Git - Git으로 버그 찾기
 url: "/book/ko/v2/Git-도구-Git으로-버그-찾기.html"
+aliases:
+- "/book/ko/Git-도구-Git으로-버그-찾기.html"
+- "/book/ko/v1/Git-도구-Git으로-버그-찾기.html"
 ---
 <h2 id="_git으로_버그_찾기">Git으로 버그 찾기</h2>
 <div class="paragraph">
