--- a/external/book/content/book/ko/v2/Git-도구-서브모듈.html
+++ b/external/book/content/book/ko/v2/Git-도구-서브모듈.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-도구-Bundle
 title: Git - 서브모듈
 url: "/book/ko/v2/Git-도구-서브모듈.html"
+aliases:
+- "/book/ko/Git-도구-서브모듈.html"
+- "/book/ko/v1/Git-도구-서브모듈.html"
 ---
 <h2 id="_git_submodules">서브모듈</h2>
 <div class="paragraph">
