--- a/external/book/content/book/ko/v2/Git-브랜치-Rebase-하기.html
+++ b/external/book/content/book/ko/v2/Git-브랜치-Rebase-하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-브랜치-요약
 title: Git - Rebase 하기
 url: "/book/ko/v2/Git-브랜치-Rebase-하기.html"
+aliases:
+- "/book/ko/Git-브랜치-Rebase하기.html"
+- "/book/ko/v1/Git-브랜치-Rebase하기.html"
 ---
 <h2 id="_rebasing">Rebase 하기</h2>
 <div class="paragraph">
