--- a/external/book/content/book/ko/v2/Git-브랜치-리모트-브랜치.html
+++ b/external/book/content/book/ko/v2/Git-브랜치-리모트-브랜치.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-브랜치-Rebase-하기
 title: Git - 리모트 브랜치
 url: "/book/ko/v2/Git-브랜치-리모트-브랜치.html"
+aliases:
+- "/book/ko/Git-브랜치-리모트-브랜치.html"
+- "/book/ko/v1/Git-브랜치-리모트-브랜치.html"
 ---
 <h2 id="_remote_branches">리모트 브랜치</h2>
 <div class="paragraph">
