--- a/external/book/content/book/ko/v2/Git-브랜치-브랜치-관리.html
+++ b/external/book/content/book/ko/v2/Git-브랜치-브랜치-관리.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-브랜치-브랜치-워크플로
 title: Git - 브랜치 관리
 url: "/book/ko/v2/Git-브랜치-브랜치-관리.html"
+aliases:
+- "/book/ko/Git-브랜치-브랜치-관리.html"
+- "/book/ko/v1/Git-브랜치-브랜치-관리.html"
 ---
 <h2 id="_branch_management">브랜치 관리</h2>
 <div class="paragraph">
