--- a/external/book/content/book/ko/v2/Git-브랜치-브랜치-워크플로.html
+++ b/external/book/content/book/ko/v2/Git-브랜치-브랜치-워크플로.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git-브랜치-리모트-브랜치
 title: Git - 브랜치 워크플로
 url: "/book/ko/v2/Git-브랜치-브랜치-워크플로.html"
+aliases:
+- "/book/ko/Git-브랜치-브랜치-Workflow.html"
+- "/book/ko/v1/Git-브랜치-브랜치-Workflow.html"
 ---
 <h2 id="_브랜치_워크플로">브랜치 워크플로</h2>
 <div class="paragraph">
