--- a/external/book/content/book/ko/v2/Git맞춤-요약.html
+++ b/external/book/content/book/ko/v2/Git맞춤-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git과-여타-버전-관리-시스템-Git:-범용-Client
 title: Git - 요약
 url: "/book/ko/v2/Git맞춤-요약.html"
+aliases:
+- "/book/ko/Git맞춤-요약.html"
+- "/book/ko/v1/Git맞춤-요약.html"
 ---
 <h2 id="_요약_10">요약</h2>
 <div class="paragraph">
