--- a/external/book/content/book/ko/v2/Git맞춤-정책-구현하기.html
+++ b/external/book/content/book/ko/v2/Git맞춤-정책-구현하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git맞춤-요약
 title: Git - 정책 구현하기
 url: "/book/ko/v2/Git맞춤-정책-구현하기.html"
+aliases:
+- "/book/ko/Git맞춤-정책-구현하기.html"
+- "/book/ko/v1/Git맞춤-정책-구현하기.html"
 ---
 <h2 id="_an_example_git_enforced_policy">정책 구현하기</h2>
 <div class="paragraph">
