--- a/external/book/content/book/ko/v2/Git의-기초-되돌리기.html
+++ b/external/book/content/book/ko/v2/Git의-기초-되돌리기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-기초-리모트-저장소
 title: Git - 되돌리기
 url: "/book/ko/v2/Git의-기초-되돌리기.html"
+aliases:
+- "/book/ko/Git의-기초-되돌리기.html"
+- "/book/ko/v1/Git의-기초-되돌리기.html"
 ---
 <h2 id="_undoing">되돌리기</h2>
 <div class="paragraph">
