--- a/external/book/content/book/ko/v2/Git의-기초-리모트-저장소.html
+++ b/external/book/content/book/ko/v2/Git의-기초-리모트-저장소.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-기초-태그
 title: Git - 리모트 저장소
 url: "/book/ko/v2/Git의-기초-리모트-저장소.html"
+aliases:
+- "/book/ko/Git의-기초-리모트-저장소.html"
+- "/book/ko/v1/Git의-기초-리모트-저장소.html"
 ---
 <h2 id="_remote_repos">리모트 저장소</h2>
 <div class="paragraph">
