--- a/external/book/content/book/ko/v2/Git의-기초-수정하고-저장소에-저장하기.html
+++ b/external/book/content/book/ko/v2/Git의-기초-수정하고-저장소에-저장하기.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-기초-커밋-히스토리-조회하기
 title: Git - 수정하고 저장소에 저장하기
 url: "/book/ko/v2/Git의-기초-수정하고-저장소에-저장하기.html"
+aliases:
+- "/book/ko/Git의-기초-수정하고-저장소에-저장하기.html"
+- "/book/ko/v1/Git의-기초-수정하고-저장소에-저장하기.html"
 ---
 <h2 id="_수정하고_저장소에_저장하기">수정하고 저장소에 저장하기</h2>
 <div class="paragraph">
