--- a/external/book/content/book/ko/v2/Git의-기초-태그.html
+++ b/external/book/content/book/ko/v2/Git의-기초-태그.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-기초-Git-Alias
 title: Git - 태그
 url: "/book/ko/v2/Git의-기초-태그.html"
+aliases:
+- "/book/ko/Git의-기초-태그.html"
+- "/book/ko/v1/Git의-기초-태그.html"
 ---
 <h2 id="_git_tagging">태그</h2>
 <div class="paragraph">
