--- a/external/book/content/book/ko/v2/Git의-내부-데이터-전송-프로토콜.html
+++ b/external/book/content/book/ko/v2/Git의-내부-데이터-전송-프로토콜.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-운영-및-데이터-복구
 title: Git - 데이터 전송 프로토콜
 url: "/book/ko/v2/Git의-내부-데이터-전송-프로토콜.html"
+aliases:
+- "/book/ko/Git의-내부-데이터-전송-프로토콜.html"
+- "/book/ko/v1/Git의-내부-데이터-전송-프로토콜.html"
 ---
 <h2 id="_데이터_전송_프로토콜">데이터 전송 프로토콜</h2>
 <div class="paragraph">
