--- a/external/book/content/book/ko/v2/Git의-내부-운영-및-데이터-복구.html
+++ b/external/book/content/book/ko/v2/Git의-내부-운영-및-데이터-복구.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-내부-환경변수
 title: Git - 운영 및 데이터 복구
 url: "/book/ko/v2/Git의-내부-운영-및-데이터-복구.html"
+aliases:
+- "/book/ko/Git의-내부-운영-및-데이터-복구.html"
+- "/book/ko/v1/Git의-내부-운영-및-데이터-복구.html"
 ---
 <h2 id="_운영_및_데이터_복구">운영 및 데이터 복구</h2>
 <div class="paragraph">
