--- a/external/book/content/book/ko/v2/시작하기-Git-기초.html
+++ b/external/book/content/book/ko/v2/시작하기-Git-기초.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/시작하기-CLI
 title: Git - Git 기초
 url: "/book/ko/v2/시작하기-Git-기초.html"
+aliases:
+- "/book/ko/시작하기-Git-기초.html"
+- "/book/ko/v1/시작하기-Git-기초.html"
 ---
 <h2 id="_git_기초">Git 기초</h2>
 <div class="paragraph">
