--- a/external/book/content/book/ko/v2/시작하기-Git-최초-설정.html
+++ b/external/book/content/book/ko/v2/시작하기-Git-최초-설정.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/시작하기-도움말-보기
 title: Git - Git 최초 설정
 url: "/book/ko/v2/시작하기-Git-최초-설정.html"
+aliases:
+- "/book/ko/시작하기-Git-최초-설정.html"
+- "/book/ko/v1/시작하기-Git-최초-설정.html"
 ---
 <h2 id="_first_time">Git 최초 설정</h2>
 <div class="paragraph">
