--- a/external/book/content/book/ko/v2/시작하기-버전-관리란?.html
+++ b/external/book/content/book/ko/v2/시작하기-버전-관리란?.html
@@ -19,6 +19,10 @@ title: Git - 버전 관리란?
 url: "/book/ko/v2/시작하기-버전-관리란?.html"
 aliases:
 - "/book/ko/v2/시작하기-버전-관리란.html"
+- "/book/ko/시작하기.html"
+- "/book/ko/v1/시작하기.html"
+- "/book/ko/시작하기-버전-관리란?.html"
+- "/book/ko/v1/시작하기-버전-관리란?.html"
 ---
 <p>이 장에서 설명하는 것은 Git을 처음 접하는 사람에게 필요한 내용이다.
 먼저 버전 관리 도구에 대한 이해와 Git을 설치하는 방법을 설명하고 마지막으로 Git 서버를 설정하고 사용하는 방법을 설명한다.
