--- a/external/book/content/book/ko/v2/시작하기-요약.html
+++ b/external/book/content/book/ko/v2/시작하기-요약.html
@@ -17,6 +17,9 @@ book:
     next: book/ko/v2/Git의-기초-Git-저장소-만들기
 title: Git - 요약
 url: "/book/ko/v2/시작하기-요약.html"
+aliases:
+- "/book/ko/시작하기-요약.html"
+- "/book/ko/v1/시작하기-요약.html"
 ---
 <h2 id="_요약">요약</h2>
 <div class="paragraph">
