--- a/external/book/content/book/ms/v2/_index.html
+++ b/external/book/content/book/ms/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/ms/v2.html"
 aliases:
 - "/book/ms/v2/index.html"
+- "/book/ms/v1/index.html"
 - "/book/ms/index.html"
 ---
